# panoptic_mapping

./: README.md  panoptic_mapping_https.rosinstall  panoptic_mapping_ssh.rosinstall
minkindr/: CMakeLists.txt  package.xml
panoptic_mapping/: CMakeLists.txt  package.xml
panoptic_mapping/cmake/: functions.cmake
panoptic_mapping/include/panoptic_mapping/common/: input_data.h
panoptic_mapping/include/panoptic_mapping/integration/: class_projective_tsdf_integrator.h  projection_interpolators.h  projective_tsdf_integrator.h  single_tsdf_integrator.h
panoptic_mapping/include/panoptic_mapping/labels/: csv_label_handler.h  label_entry.h  mini_csv_label_handler.h  null_label_handler.h  range_label_handler.h
panoptic_mapping/include/panoptic_mapping/map/: class_name_manager.h  submap.h
panoptic_mapping/include/panoptic_mapping/map/classification/: binary_count.h  fixed_count.h  moving_binary_count.h  uncertainty.h  variable_count.h
panoptic_mapping/include/panoptic_mapping/map/scores/: average.h  latest.h
panoptic_mapping/include/panoptic_mapping/map_management/: change_detector.h  map_manager.h  map_manager_base.h  null_map_manager.h
panoptic_mapping/include/panoptic_mapping/submap_allocation/: monolithic_freespace_allocator.h  null_submap_allocator.h  semantic_submap_allocator.h
panoptic_mapping/include/panoptic_mapping/tools/: coloring.h  evaluation_data_writer.h  log_data_writer.h  null_data_writer.h  quat_transformation_protobuf_utils.h
panoptic_mapping/include/panoptic_mapping/tracking/: detectron_id_tracker.h  ground_truth_id_tracker.h  projective_id_tracker.h  single_tsdf_tracker.h
panoptic_mapping/proto/panoptic_mapping/: Submap.proto
panoptic_mapping/src/labels/: mini_csv_label_handler.cpp
panoptic_mapping/src/map/: class_name_manager.cpp  submap.cpp
panoptic_mapping/src/map_management/: change_detector.cpp  map_manager.cpp  null_map_manager.cpp  tsdf_registrator.cpp
panoptic_mapping/src/submap_allocation/: semantic_submap_allocator.cpp
panoptic_mapping/src/tools/: coloring.cpp  quat_transformation_protobuf_utils.cpp
panoptic_mapping/src/tracking/: detectron_id_tracker.cpp
panoptic_mapping_msgs/: CMakeLists.txt  package.xml
panoptic_mapping_msgs/msg/: DetectronLabel.msg  DetectronLabels.msg
panoptic_mapping_ros/: CMakeLists.txt  package.xml
panoptic_mapping_ros/app/: panoptic_mapper_node.cpp
panoptic_mapping_ros/config/mapper/: flat_detectron.yaml  flat_groundtruth.yaml  realsense_owlvit_sam.yaml  realsense_owlvit_sam_online.yaml  single_tsdf.yaml
panoptic_mapping_ros/config/rviz/: devel.rviz  devel_yaml.rviz
panoptic_mapping_ros/include/panoptic_mapping_ros/: dependencies.h  panoptic_mapper.h
panoptic_mapping_ros/include/panoptic_mapping_ros/conversions/: conversions.h  mesh_vis.h  ptcloud_vis.h
panoptic_mapping_ros/include/panoptic_mapping_ros/input/: input_subscriber.h  input_synchronizer.h
panoptic_mapping_ros/include/panoptic_mapping_ros/visualization/: planning_visualizer.h  single_tsdf_visualizer.h  submap_visualizer.h  tracking_visualizer.h
panoptic_mapping_ros/launch/: run.launch  run_self_data.launch  run_self_data.launch.py  run_self_data_online.launch  run_self_data_online.launch.py
panoptic_mapping_ros/src/: panoptic_mapper.cpp
panoptic_mapping_ros/src/conversions/: conversions.cpp
panoptic_mapping_ros/src/input/: input_synchronizer.cpp
panoptic_mapping_ros/src/visualization/: planning_visualizer.cpp  single_tsdf_visualizer.cpp  submap_visualizer.cpp  tracking_visualizer.cpp
panoptic_mapping_utils/: CMakeLists.txt  package.xml
panoptic_mapping_utils/app/: mesh_saver_node.cpp  multi_map_evaluation.cpp
panoptic_mapping_utils/flat_dataset/: flat_data_player.py
panoptic_mapping_utils/include/panoptic_mapping_utils/: mesh_saver.h
panoptic_mapping_utils/launch/: mesh_saver.launch  play_flat_dataset.launch  play_flat_dataset.launch.py
panoptic_mapping_utils/src/: mesh_saver.cpp
panoptic_mapping_utils/src/flat_dataset/: flat_data_player.py
voxblox/: CMakeLists.txt  package.xml
voxblox/cmake/: functions.cmake
voxblox/include/voxblox/core/: layer.h
voxblox/src/integrator/: esdf_integrator.cc
voxblox_msgs/: CMakeLists.txt  package.xml
voxblox_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
voxblox_rviz_plugin/include/voxblox_rviz_plugin/: voxblox_mesh_display.h  voxblox_mesh_visual.h  voxblox_multi_mesh_display.h
voxblox_rviz_plugin/src/: material_loader.cc  voxblox_mesh_display.cc  voxblox_mesh_visual.cc  voxblox_multi_mesh_display.cc
