<?xml version="1.0"?>
<package format="3">
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>
    Utilities to setup and run data for panoptic mapping.
  </description>
  <maintainer email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </maintainer>
  <license>Apache 2.0</license>

  <author email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

