<?xml version="1.0"?>
<package format="2">
  <name>panoptic_mapping</name>
  <version>0.0.0</version>
  <description>Prototyping a panoptic metric map. </description>

  <author email="schmluk@mavt.ethz.ch">Lukas Schmid</author>
  <maintainer email="schmluk@mavt.ethz.ch">Lukas Schmid</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>voxblox</depend>

  <depend>xmlrpcpp</depend>
  <depend>eigen3</depend>
  <depend>glog</depend>
  <depend>gflags</depend>
  <depend>protobuf</depend>
  <depend>opencv4</depend>

  <depend>yaml-cpp</depend>
  
  <export>
  </export>
</package>
