<?xml version="1.0"?>
<package format="3">
  <name>panoptic_mapping</name>
  <version>1.0.0</version>
  <description>
    Utilities to setup and run data for panoptic mapping.
  </description>
  <maintainer email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </maintainer>
  <license>Apache 2.0</license>

  <author email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>voxblox</depend>

  <depend>eigen3</depend>
  <depend>glog</depend>
  <depend>gflags</depend>
  <depend>protobuf</depend>
  <depend>opencv4</depend>

  <depend>yaml-cpp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
