<?xml version="1.0"?>

<package format="3">
  <name>panoptic_mapping_msgs</name>
  <version>1.0.0</version>
  <description>
    Utilities to setup and run data for panoptic mapping.
  </description>
  <maintainer email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </maintainer>
  <license>Apache 2.0</license>

  <author email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

