<?xml version="1.0"?>
<package format="3">
  <name>panoptic_mapping_utils</name>
  <version>1.0.0</version>
  <description>
    Utilities to setup and run data for panoptic mapping.
  </description>
  <maintainer email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </maintainer>
  <license>Apache 2.0</license>

  <author email="zengxiangwei@agile-robot.com">
    The agile-robot Authors
  </author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>panoptic_mapping_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>glog</depend>
  
  <depend>panoptic_mapping</depend>
  <depend>panoptic_mapping_ros</depend>
  <depend>voxblox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
